# stock-prediction-project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
notebooks/: data_exploration.ipynb  execute_trades.ipynb  mlp_model_inference.ipynb  mlp_model_training.ipynb
src/api/: server.py
src/backtest/: backtest.py  evaluation.py
src/config/: config.yaml  model_registry.py
src/data/: fetch_data.py  preprocess.py
src/models/: base_model.py  inference.py  mlp.py  mlp_keras.py  xgboost_model.py
src/trading/: alpaca_trade.py  portfolio.py
src/training/: job_runner.py  train_pipeline.py
src/utils/: job_config.py  job_store.py
tests/: test_evaluation.py
